# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: aabb.cpp  aabb.hpp  box.cpp  box.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  light.cpp  light.hpp  main.cpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp  stb_image_write.h  triangle.cpp  triangle.hpp  utility.cpp  utility.hpp
